added baseline RS

--- a/MiniChallenge/RSY_ MiniChallenge_FS24.ipynb
+++ b/MiniChallenge/RSY_ MiniChallenge_FS24.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "3.501556983616962"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -694,14 +694,14 @@
     }
    ],
    "source": [
-    "df_movie_features = df_movieratings.pivot(\n",
+    "user_item_matrix = df_movieratings.pivot(\n",
     "    index='userId',\n",
     "    columns='movieId',\n",
     "    values='rating'\n",
     ").fillna(0)\n",
     "\n",
     "plt.figure(figsize=(10, 10))\n",
-    "sns.heatmap(df_movie_features)\n",
+    "sns.heatmap(user_item_matrix)\n",
     "plt.title('User-Item Matrix')\n",
     "plt.xlabel('Movie ID')\n",
     "plt.ylabel('User ID')\n",
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -770,6 +770,144 @@
     "2. Build a RS that recommends based on *random* recommendations.  \n",
     "\n",
     "Output the recommendations for three example users of your choice. Can you find a user that represents your taste? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Baseline Recommender System"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BaselineRS:\n",
+    "    def __init__(self, beta_u=20, beta_i=20, top_n=50):\n",
+    "        self.beta_u = beta_u\n",
+    "        self.beta_i = beta_i\n",
+    "        self.top_n = top_n\n",
+    "        self.mu = None\n",
+    "        self.b_u = {}\n",
+    "        self.b_i = {}\n",
+    "\n",
+    "    def fit(self, ratings):\n",
+    "        self.mu = np.mean(ratings[:, 2])\n",
+    "        \n",
+    "        unique_users = np.unique(ratings[:, 0])\n",
+    "        unique_items = np.unique(ratings[:, 1])\n",
+    "\n",
+    "        for user in unique_users:\n",
+    "            user_ratings = ratings[ratings[:, 0] == user, 2]\n",
+    "            self.b_u[user] = np.sum(user_ratings - self.mu) / (len(user_ratings) + self.beta_u)\n",
+    "        \n",
+    "        for item in unique_items:\n",
+    "            item_ratings = ratings[ratings[:, 1] == item, 2]\n",
+    "            applicable_user_biases = np.array([self.b_u[user] for user in ratings[ratings[:, 1] == item, 0]])\n",
+    "            self.b_i[item] = np.sum(item_ratings - applicable_user_biases - self.mu) / (len(item_ratings) + self.beta_i)\n",
+    "\n",
+    "    def predict(self, user, item):\n",
+    "        bu = self.b_u.get(user, 0)\n",
+    "        bi = self.b_i.get(item, 0)\n",
+    "        return self.mu + bu + bi\n",
+    "\n",
+    "    def recommend(self, user, item_pool):\n",
+    "        predictions = [(item, self.predict(user, item)) for item in item_pool]\n",
+    "        return sorted(predictions, key=lambda x: x[1], reverse=True)[:self.top_n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rs = BaselineRS()\n",
+    "rs.fit(user_item_matrix.values)\n",
+    "\n",
+    "user = 6\n",
+    "item_pool = df_movieratings['movieId'].unique()\n",
+    "\n",
+    "recommendations = rs.recommend(user, item_pool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 0.7450485990694407),\n",
+       " (2, 0.49145840199355506),\n",
+       " (5, 0.44493658824921),\n",
+       " (4, 0.36010760619799836),\n",
+       " (6, 0.2778688524590164),\n",
+       " (47, 0.2778688524590164),\n",
+       " (50, 0.2778688524590164),\n",
+       " (70, 0.2778688524590164),\n",
+       " (101, 0.2778688524590164),\n",
+       " (110, 0.2778688524590164),\n",
+       " (151, 0.2778688524590164),\n",
+       " (157, 0.2778688524590164),\n",
+       " (163, 0.2778688524590164),\n",
+       " (216, 0.2778688524590164),\n",
+       " (223, 0.2778688524590164),\n",
+       " (231, 0.2778688524590164),\n",
+       " (235, 0.2778688524590164),\n",
+       " (260, 0.2778688524590164),\n",
+       " (296, 0.2778688524590164),\n",
+       " (316, 0.2778688524590164),\n",
+       " (333, 0.2778688524590164),\n",
+       " (349, 0.2778688524590164),\n",
+       " (356, 0.2778688524590164),\n",
+       " (362, 0.2778688524590164),\n",
+       " (367, 0.2778688524590164),\n",
+       " (423, 0.2778688524590164),\n",
+       " (441, 0.2778688524590164),\n",
+       " (457, 0.2778688524590164),\n",
+       " (480, 0.2778688524590164),\n",
+       " (500, 0.2778688524590164),\n",
+       " (527, 0.2778688524590164),\n",
+       " (543, 0.2778688524590164),\n",
+       " (552, 0.2778688524590164),\n",
+       " (553, 0.2778688524590164),\n",
+       " (590, 0.2778688524590164),\n",
+       " (592, 0.2778688524590164),\n",
+       " (593, 0.2778688524590164),\n",
+       " (596, 0.2778688524590164),\n",
+       " (608, 0.2778688524590164),\n",
+       " (648, 0.2778688524590164),\n",
+       " (661, 0.2778688524590164),\n",
+       " (673, 0.2778688524590164),\n",
+       " (733, 0.2778688524590164),\n",
+       " (736, 0.2778688524590164),\n",
+       " (780, 0.2778688524590164),\n",
+       " (804, 0.2778688524590164),\n",
+       " (919, 0.2778688524590164),\n",
+       " (923, 0.2778688524590164),\n",
+       " (940, 0.2778688524590164),\n",
+       " (943, 0.2778688524590164)]"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random Recommender System"
    ]
   },
   {
