fixed baseline RS and added random RS

--- a/MiniChallenge/RSY_ MiniChallenge_FS24.ipynb
+++ b/MiniChallenge/RSY_ MiniChallenge_FS24.ipynb
@@ -781,125 +781,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BaselineRS:\n",
-    "    def __init__(self, beta_u=20, beta_i=20, top_n=50):\n",
+    "\n",
+    "class BaselineRecommender:\n",
+    "    def __init__(self, ratings_matrix, beta_u=20, beta_i=20, top_n=50):\n",
+    "        self.ratings_matrix = ratings_matrix\n",
     "        self.beta_u = beta_u\n",
     "        self.beta_i = beta_i\n",
     "        self.top_n = top_n\n",
-    "        self.mu = None\n",
-    "        self.b_u = {}\n",
-    "        self.b_i = {}\n",
+    "        self.mu = np.mean(ratings_matrix[ratings_matrix != 0])  # Global average rating\n",
     "\n",
-    "    def fit(self, ratings):\n",
-    "        self.mu = np.mean(ratings[:, 2])\n",
+    "    def compute_baseline_predictions(self):\n",
+    "        user_means = np.where(self.ratings_matrix.sum(axis=1)[:, np.newaxis],\n",
+    "                              np.mean(self.ratings_matrix, axis=1, where=self.ratings_matrix != 0)[:, np.newaxis],\n",
+    "                              self.mu)\n",
     "        \n",
-    "        unique_users = np.unique(ratings[:, 0])\n",
-    "        unique_items = np.unique(ratings[:, 1])\n",
-    "\n",
-    "        for user in unique_users:\n",
-    "            user_ratings = ratings[ratings[:, 0] == user, 2]\n",
-    "            self.b_u[user] = np.sum(user_ratings - self.mu) / (len(user_ratings) + self.beta_u)\n",
+    "        item_means = np.where(self.ratings_matrix.sum(axis=0),\n",
+    "                              np.mean(self.ratings_matrix, axis=0, where=self.ratings_matrix != 0),\n",
+    "                              self.mu)\n",
     "        \n",
-    "        for item in unique_items:\n",
-    "            item_ratings = ratings[ratings[:, 1] == item, 2]\n",
-    "            applicable_user_biases = np.array([self.b_u[user] for user in ratings[ratings[:, 1] == item, 0]])\n",
-    "            self.b_i[item] = np.sum(item_ratings - applicable_user_biases - self.mu) / (len(item_ratings) + self.beta_i)\n",
+    "        self.b_u = (user_means - self.mu) / (np.count_nonzero(self.ratings_matrix, axis=1)[:, np.newaxis] + self.beta_u)\n",
+    "        self.b_i = (item_means - self.mu) / (np.count_nonzero(self.ratings_matrix, axis=0) + self.beta_i)\n",
+    "        \n",
+    "        self.baseline_predictions = self.mu + self.b_u + self.b_i.T\n",
     "\n",
-    "    def predict(self, user, item):\n",
-    "        bu = self.b_u.get(user, 0)\n",
-    "        bi = self.b_i.get(item, 0)\n",
-    "        return self.mu + bu + bi\n",
-    "\n",
-    "    def recommend(self, user, item_pool):\n",
-    "        predictions = [(item, self.predict(user, item)) for item in item_pool]\n",
-    "        return sorted(predictions, key=lambda x: x[1], reverse=True)[:self.top_n]"
+    "    def recommend(self, user_id):\n",
+    "        user_ratings = self.ratings_matrix[user_id, :]\n",
+    "        unrated_items = np.where(user_ratings == 0)[0]\n",
+    "        predictions = self.baseline_predictions[user_id, unrated_items]\n",
+    "        top_n_indices = unrated_items[np.argsort(-predictions)[:self.top_n]]\n",
+    "        return top_n_indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rs = BaselineRS()\n",
-    "rs.fit(user_item_matrix.values)\n",
-    "\n",
-    "user = 6\n",
-    "item_pool = df_movieratings['movieId'].unique()\n",
-    "\n",
-    "recommendations = rs.recommend(user, item_pool)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(3, 0.7450485990694407),\n",
-       " (2, 0.49145840199355506),\n",
-       " (5, 0.44493658824921),\n",
-       " (4, 0.36010760619799836),\n",
-       " (6, 0.2778688524590164),\n",
-       " (47, 0.2778688524590164),\n",
-       " (50, 0.2778688524590164),\n",
-       " (70, 0.2778688524590164),\n",
-       " (101, 0.2778688524590164),\n",
-       " (110, 0.2778688524590164),\n",
-       " (151, 0.2778688524590164),\n",
-       " (157, 0.2778688524590164),\n",
-       " (163, 0.2778688524590164),\n",
-       " (216, 0.2778688524590164),\n",
-       " (223, 0.2778688524590164),\n",
-       " (231, 0.2778688524590164),\n",
-       " (235, 0.2778688524590164),\n",
-       " (260, 0.2778688524590164),\n",
-       " (296, 0.2778688524590164),\n",
-       " (316, 0.2778688524590164),\n",
-       " (333, 0.2778688524590164),\n",
-       " (349, 0.2778688524590164),\n",
-       " (356, 0.2778688524590164),\n",
-       " (362, 0.2778688524590164),\n",
-       " (367, 0.2778688524590164),\n",
-       " (423, 0.2778688524590164),\n",
-       " (441, 0.2778688524590164),\n",
-       " (457, 0.2778688524590164),\n",
-       " (480, 0.2778688524590164),\n",
-       " (500, 0.2778688524590164),\n",
-       " (527, 0.2778688524590164),\n",
-       " (543, 0.2778688524590164),\n",
-       " (552, 0.2778688524590164),\n",
-       " (553, 0.2778688524590164),\n",
-       " (590, 0.2778688524590164),\n",
-       " (592, 0.2778688524590164),\n",
-       " (593, 0.2778688524590164),\n",
-       " (596, 0.2778688524590164),\n",
-       " (608, 0.2778688524590164),\n",
-       " (648, 0.2778688524590164),\n",
-       " (661, 0.2778688524590164),\n",
-       " (673, 0.2778688524590164),\n",
-       " (733, 0.2778688524590164),\n",
-       " (736, 0.2778688524590164),\n",
-       " (780, 0.2778688524590164),\n",
-       " (804, 0.2778688524590164),\n",
-       " (919, 0.2778688524590164),\n",
-       " (923, 0.2778688524590164),\n",
-       " (940, 0.2778688524590164),\n",
-       " (943, 0.2778688524590164)]"
+       "array([3499, 9266, 8136, 5277, 3106,  433,  432, 5519, 3077, 2327, 8232,\n",
+       "       3063, 8316, 9216,  405, 2336, 8337, 8363, 9196, 5297, 8365, 2943,\n",
+       "       2935, 2934, 2933, 2932, 5490, 8446, 8130, 5484, 4738, 9299, 9405,\n",
+       "       3315, 5620, 3289, 8921, 7885, 9378, 7890, 9370, 7899, 9364, 1539,\n",
+       "       9362, 9361, 5585, 5573, 7948, 3251], dtype=int64)"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "recommender = BaselineRecommender(user_item_matrix.values)\n",
+    "recommender.compute_baseline_predictions()\n",
+    "recommendations = recommender.recommend(user_id=88)\n",
+    "\n",
     "recommendations"
    ]
   },
@@ -912,10 +853,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class RandomRecommender:\n",
+    "    def __init__(self, num_items, top_n=50):\n",
+    "        self.num_items = num_items\n",
+    "        self.top_n = top_n\n",
+    "\n",
+    "    def recommend(self):\n",
+    "        random_indices = np.random.choice(self.num_items, self.top_n, replace=False)\n",
+    "        return random_indices"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -942,7 +892,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def partition_data(data, ratio=0.8):\n",
+    "    data = data.sample(frac=1).reset_index(drop=True)\n",
+    "    train_size = int(len(data) * ratio)\n",
+    "    return data[:train_size], data[train_size:]\n",
+    "\n",
+    "def calc_mean_absolute_error(predictions, actuals):\n",
+    "    return np.mean(np.abs(predictions - actuals))\n",
+    "\n",
+    "def calc_root_mean_squared_error(predictions, actuals):\n",
+    "    return np.sqrt(np.mean((predictions - actuals) ** 2))\n",
+    "\n",
+    "def calc_precision_at_n(predictions, actuals, n):\n",
+    "    top_n_predictions = np.argsort(predictions)[::-1][:n]\n",
+    "    return np.sum(actuals[top_n_predictions]) / n\n",
+    "\n",
+    "def calc_recall_at_n(predictions, actuals, n):\n",
+    "    top_n_predictions = np.argsort(predictions)[::-1][:n]\n",
+    "    return np.sum(actuals[top_n_predictions]) / np.sum(actuals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: **Considerations**"
+   ]
   },
   {
    "cell_type": "markdown",
