modified baselinerecommender to be a scikit-learn estimator

--- a/MiniChallenge/RSY_ MiniChallenge_FS24.ipynb
+++ b/MiniChallenge/RSY_ MiniChallenge_FS24.ipynb
@@ -785,35 +785,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.base import BaseEstimator, RegressorMixin\n",
     "\n",
-    "class BaselineRecommender:\n",
-    "    def __init__(self, ratings_matrix, beta_u=20, beta_i=20, top_n=50):\n",
-    "        self.ratings_matrix = ratings_matrix\n",
+    "class BaselineRecommender(BaseEstimator, RegressorMixin):\n",
+    "    def __init__(self, beta_u=20, beta_i=20, top_n=50):\n",
+    "        # Hyperparameters\n",
     "        self.beta_u = beta_u\n",
     "        self.beta_i = beta_i\n",
     "        self.top_n = top_n\n",
-    "        self.mu = np.mean(ratings_matrix[ratings_matrix != 0])  # Global average rating\n",
+    "        # Model parameters initialized as None. Will be set in fit().\n",
+    "        self.mu = None\n",
+    "        self.b_u = None\n",
+    "        self.b_i = None\n",
+    "        self.baseline_predictions = None\n",
     "\n",
-    "    def fit(self):\n",
-    "        user_means = np.where(self.ratings_matrix.sum(axis=1)[:, np.newaxis],\n",
-    "                              np.mean(self.ratings_matrix, axis=1, where=self.ratings_matrix != 0)[:, np.newaxis],\n",
+    "    def fit(self, X, y=None):\n",
+    "        self.mu = np.mean(X[X != 0])  # Global average rating\n",
+    "        user_means = np.where(X.sum(axis=1)[:, np.newaxis],\n",
+    "                              np.mean(X, axis=1, where=X != 0)[:, np.newaxis],\n",
     "                              self.mu)\n",
     "        \n",
-    "        item_means = np.where(self.ratings_matrix.sum(axis=0),\n",
-    "                              np.mean(self.ratings_matrix, axis=0, where=self.ratings_matrix != 0),\n",
+    "        item_means = np.where(X.sum(axis=0),\n",
+    "                              np.mean(X, axis=0, where=X != 0),\n",
     "                              self.mu)\n",
     "        \n",
-    "        self.b_u = (user_means - self.mu) / (np.count_nonzero(self.ratings_matrix, axis=1)[:, np.newaxis] + self.beta_u)\n",
-    "        self.b_i = (item_means - self.mu) / (np.count_nonzero(self.ratings_matrix, axis=0) + self.beta_i)\n",
+    "        self.b_u = (user_means - self.mu) / (np.count_nonzero(X, axis=1)[:, np.newaxis] + self.beta_u)\n",
+    "        self.b_i = (item_means - self.mu) / (np.count_nonzero(X, axis=0) + self.beta_i)\n",
     "        \n",
     "        self.baseline_predictions = self.mu + self.b_u + self.b_i.T\n",
+    "        \n",
+    "        return self  # fit should return self\n",
     "\n",
-    "    def recommend(self, user_id):\n",
-    "        user_ratings = self.ratings_matrix[user_id, :]\n",
+    "    def recommend(self, user_id, ratings_matrix):\n",
+    "        user_ratings = ratings_matrix[user_id, :]\n",
     "        unrated_items = np.where(user_ratings == 0)[0]\n",
     "        predictions = self.baseline_predictions[user_id, unrated_items]\n",
     "        top_n_indices = unrated_items[np.argsort(-predictions)[:self.top_n]]\n",
-    "        return top_n_indices"
+    "        return top_n_indices\n",
+    "\n",
+    "    def score(self, X, y=None):\n",
+    "        # Implement a scoring function relevant to your problem\n",
+    "        # This could be a function that measures the quality of recommendations\n",
+    "        # Placeholder: Returns a dummy value\n",
+    "        return 0\n"
    ]
   },
   {
